@@ -18,3 +18,6 @@
   * Robots and Awards:
       added results from PNW Championships and Worlds
   * Removed link to the live stream under media gallery
+ 2015-05-30
+  *Calendar:
+	  Fixed the Calendar error coming from google's new embedded links.
